--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,89 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>
+      Weather App 
+    </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+<ion-content class="background mainContent">
+  <div class="flexContainer">
+  <div padding class="primaryInfo">
+    <ion-grid class="flexFix">
+      <ion-row>
+        <ion-col col-6>
+          <h1 class="cityTitle">Santiago</h1>
+          <p class="date">Monday, October 21</p>
+          <h2 class="weatherState">Sunny</h2>
+        </ion-col>
+        <ion-col col-6>
+          <ion-icon name="sunny" class="iconState"></ion-icon>
+        </ion-col>        
+      </ion-row>   
+      <ion-row>
+        <ion-col col-12>
+          <p class="currentTemperature">12ºC</p>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
+  <div padding class="secondaryInfo">
+    <ion-grid class="items">
+      <ion-row>
+        <ion-col col-6>
+          <ion-grid>
+            <ion-row>
+              <ion-col col-4>
+                <ion-icon name="ionic" class="iconState"></ion-icon>
+              </ion-col>
+              <ion-col col-8>
+                <p>min temp</p>
+                <p>11ºc</p>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-col>
+        <ion-col col-6>
+          <ion-grid>
+            <ion-row>
+              <ion-col col-4>
+                <ion-icon name="ionic" class="iconState"></ion-icon>
+              </ion-col>
+              <ion-col col-8>
+                <p>min temp</p>
+                <p>11ºc</p>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-col>      
+        <ion-col col-6>
+          <ion-grid>
+            <ion-row>
+              <ion-col col-4>
+                <ion-icon name="ionic" class="iconState"></ion-icon>
+              </ion-col>
+              <ion-col col-8>
+                <p>min temp</p>
+                <p>11ºc</p>
+              </ion-col>
+            </ion-row>
+            </ion-grid>
+          </ion-col>      
+          <ion-col col-6>
+            <ion-grid>
+              <ion-row>
+                <ion-col col-4>
+                  <ion-icon name="ionic" class="iconState"></ion-icon>
+                </ion-col>
+                <ion-col col-8>
+                  <p>min temp</p>
+                  <p>11ºc</p>
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+           </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
+</div>
 </ion-content>
