--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -7,11 +7,10 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
-    </ion-item>
-  </ion-list>
+    <ion-list>
+        <ion-item> 
+            <ion-label floating>City</ion-label>
+            <ion-input type="text" value=""></ion-input>
+        </ion-item>
+      </ion-list>
 </ion-content>
